# GTF

./: .gitignore  CMakeLists.txt  README.md
examples/CalcGraph/: CalcNodeGraph.cpp  CalcNodeGraph.h  CalcNodes.cpp  CalcNodes.h  CalcWindow.cpp  CalcWindow.h  main.cpp
examples/MeshViewer/: BuiltInGfxData.cpp  BuiltInGfxData.h  MeshViewerWindow.cpp  MeshViewerWindow.h  main.cpp
examples/NoiseGenerator/: GeneratorWorker.cpp  GeneratorWorker.h  NoiseApp.cpp  NoiseApp.h  NoiseWindow.cpp  NoiseWindow.h  PerlinNoise.cpp  PerlinNoise.h  main.cpp
examples/ParticleEditor/: ParticleEditorApp.cpp  ParticleEditorApp.h  ParticleEditorWindow.cpp  ParticleEditorWindow.h  ParticleLogic.cpp  ParticleLogic.h
include/gtf/: App.h  Color.h  LangUtils.h  NodeGraph.h  OpenGLRHI.h  RHI.h  StaticMesh.h  Texture2D.h  UniqueId.h  Window.h
projects/Xcode/gtf.xcodeproj/: project.pbxproj
projects/Xcode/gtf.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
projects/vs2015/CalcGraph/: CalcGraph.vcxproj  CalcGraph.vcxproj.filters
projects/vs2015/GTF/: GTF.sln  GTF.vcxproj  GTF.vcxproj.filters
projects/vs2015/NoiseGenerator/: NoiseGenerator.vcxproj  NoiseGenerator.vcxproj.filters
src/gtf/: App.cpp  CRC32.cpp  Color.cpp  GTFApp.cpp  GTFApp.h  GTFAppMac.mm  GTFWindow.cpp  GTFWindow.h  GTFWindowMac.mm  GTFWindowWin.cpp  ImGuiSetup.h  ImGuiSetup_OGL3.cpp  ImGuiSetup_Shared.cpp  LangUtils.cpp  NodeGraph.cpp  OpenGLRHI.cpp  RHI.cpp  StaticMesh.cpp  Texture2D.cpp  UniqueId.cpp  Window.cpp
src/gtf/gui/: GTFGUIGradientPicker.cpp  GTFGUIGradientPicker.h  GTFGUIGraphEditor.cpp  GTFGUIGraphEditor.h  ImGuiSetup.h  ImGuiSetup_OGL3.cpp  ImGuiSetup_Shared.cpp
src/gtf/iosys/: GTFApp.cpp  GTFApp.h  GTFAppMac.mm  GTFAppWin.cpp  GTFWindow.cpp  GTFWindow.h  GTFWindowMac.mm
src/gtf/render/: GTFOpenGLRHI.cpp  GTFOpenGLRHI.h  GTFRHI.cpp  GTFRHI.h
src/gtf/utility/: GTFCRC32.cpp  GTFCRC32.h  GTFColor.cpp  GTFColor.h  GTFErrorHandling.h  GTFGradient.cpp  GTFGradient.h  GTFLangUtils.cpp  GTFLangUtils.h  GTFNodeGraph.cpp  GTFNodeGraph.h  GTFUniqueId.cpp  GTFUniqueId.h
